--- a/package.json
+++ b/package.json
@@ -1,32 +1,45 @@
 {
-    "private": true,
-    "scripts": {
-        "dev": "npm run development",
-        "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "watch": "npm run development -- --watch",
-        "watch-poll": "npm run watch -- --watch-poll",
-        "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-        "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
-    },
-    "devDependencies": {
-        "@babel/preset-env": "^7.6.3",
-        "axios": "^0.18",
-        "babel-cli": "^6.26.0",
-        "babel-core": "^6.26.3",
-        "babel-plugin-transform-class-properties": "^6.24.1",
-        "babel-preset-react": "^6.23.0",
-        "bootstrap": "^4.0.0",
-        "cross-env": "^5.1",
-        "jquery": "^3.2",
-        "laravel-mix": "^2.0",
-        "lodash": "^4.17.5",
-        "popper.js": "^1.12",
-        "react": "^16.2.0",
-        "react-dom": "^16.2.0"
-    },
-    "dependencies": {
-        "antd": "^3.23.6",
-        "react-router-dom": "^5.1.2"
-    }
+  "private": true,
+  "scripts": {
+    "dev": "npm run development",
+    "development": "cross-env NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "watch": "npm run development -- --watch",
+    "watch-poll": "npm run watch -- --watch-poll",
+    "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "prod": "npm run production",
+    "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "test": "jest"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.6.4",
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.6.2",
+    "@babel/plugin-transform-classes": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-transform-react-jsx": "^7.3.0",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
+    "@types/jest": "^24.0.21",
+    "axios": "^0.18",
+    "babel-loader": "^8.0.6",
+    "bootstrap": "^4.3.1",
+    "cross-env": "^6.0.3",
+    "jest": "^24.9.0",
+    "jquery": "^3.2",
+    "laravel-mix": "^5.0.0",
+    "lodash": "^4.17.5",
+    "popper.js": "^1.16.0",
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "resolve-url-loader": "^3.1.0",
+    "sass": "^1.23.3",
+    "sass-loader": "^8.0.0"
+  },
+  "dependencies": {
+    "antd": "^3.23.6",
+    "assign-deep": "^1.0.1",
+    "duix": "^1.0.5",
+    "prop-types": "latest",
+    "react-router-dom": "^5.1.2"
+  }
 }
